# ai-readable-doc-generator

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml  verify_test.py
docs/: index.md  mcp_integration.md  usage.md
src/ai_readable_doc_generator/: __init__.py  base.py  converter.py  document.py  mcp_server.py
src/ai_readable_doc_generator/cli/: __init__.py  __main__.py  cli.py  commands.py
src/ai_readable_doc_generator/models/: __init__.py  document.py  schema.py  section.py
src/ai_readable_doc_generator/parser/: __init__.py  base.py  markdown_parser.py
src/ai_readable_doc_generator/parser/plugins/: __init__.py  semantic_tagger.py
src/ai_readable_doc_generator/transformer/: __init__.py  base_transformer.py  json_transformer.py  mcp_transformer.py  yaml_transformer.py
tests/: __init__.py  conftest.py  test_base.py  test_converter.py  test_document.py  test_error_handling.py  test_format_detection.py  test_mcp_compliance.py  test_mcp_server.py  test_processor.py  test_semantic_tagger.py
tests/models/: __init__.py  test_document.py  test_schema.py  test_section.py
tests/parser/: __init__.py  test_base_parser.py  test_markdown_parser.py  test_semantic_tagger.py
tests/transformer/: test_mcp_transformer.py
